# NLP-machine-translation

./: README.md  final-3-stage-machine-translation.ipynb  pyproject.toml
app/: smt.py  smt_improved.py
data/: lm_corpus.txt  parallel_corpus.txt  test_data.txt
smt/: smt.py
utils/: smt-data-gen.py
